Update giao diện
Chỉnh sửa lại giao diện, phân tách directive với controller có sử dụng
hàm bên JQuery tạo animation cho Categories

--- a/css/style.css
+++ b/css/style.css
@@ -1524,9 +1524,7 @@ img.banner-bag {
     height: 121px;
     overflow: hidden;
 }
-.single.htmlmedia {
-	="all"
-}
+single.htmlmedia="all"
 p {
     margin: 0 0 10px;
 }
