--- a/template/categories-revolution.html
+++ b/template/categories-revolution.html
@@ -1,77 +1,50 @@
-<!--sub-categories-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<div class="sub-cate">
-    <div class=" top-nav rsidebar span_1_of_left">
-        <h3 class="cate">CATEGORIES</h3>
-        <ul class="menu">
-            <li class="item1"><a href="#">Đầm nữ    <img class="arrow-img" src="images/arrow1.png" alt=""/> </a>
-                <ul class="cute">
-                    <li class="subitem1"><a href="product.html">Váy dạ hội </a></li>
-                    <li class="subitem2"><a href="product.html">Váy đi chơi </a></li>
-                    <li class="subitem3"><a href="product.html">Đầm ngủ </a></li>
-                </ul>
-            </li>
-            <li class="item2"><a href="#">Áo nam    <img class="arrow-img " src="images/arrow1.png" alt=""/></a>
-                <ul class="cute">
-                    <li class="subitem1"><a href="product.html">Áo thun </a></li>
-                    <li class="subitem2"><a href="product.html">Áo sơ mi </a></li>
-                    <li class="subitem3"><a href="product.html">Áo khoát </a></li>
-                </ul>
-            </li>
-            <li class="item3"><a href="#">Quần nam  <img class="arrow-img img-arrow" src="images/arrow1.png" alt=""/> </a>
-                <ul class="cute">
-                    <li class="subitem1"><a href="product.html">Quần jean </a></li>
-                    <li class="subitem2"><a href="product.html">Quần kaki </a></li>
-                    <li class="subitem3"><a href="product.html">Quần thun </a></li>
-                </ul>
-            </li>
-            <li class="item4"><a href="#">Giày dép  <img class="arrow-img img-left-arrow" src="images/arrow1.png" alt=""/></a>
-                <ul class="cute">
-                    <li class="subitem1"><a href="product.html">Giày thể thao </a></li>
-                    <li class="subitem2"><a href="product.html">Giày lười </a></li>
-                    <li class="subitem3"><a href="product.html">Dép </a></li>
-                </ul>
-            </li>
-            <ul class="kid-menu ">
-                <li><a href="product.html">Mũ nón</a></li>
-                <li ><a href="product.html">Mắt kính</a></li>
-                <li ><a href="product.html">Đồng hồ</a></li>
-                <li><a href="product.html">Dây chuyền</a></li>
-                <li ><a href="product.html">Khuyên tai</a></li>
-                <li><a href="product.html">Nhẫn</a></li>
-                <li><a href="product.html">Nước hoa</a></li>
-                <li ><a href="product.html">Balô</a></li>
-                <li class="menu-kid-left"><a href="contact.html">Contact us</a></li>
+<div class=" top-nav rsidebar span_1_of_left">
+
+    <h3 class="cate">CATEGORIES</h3>
+    <ul class="menu">
+        <li class="item1"><a href="#">Curabitur sapien<img class="arrow-img" src="images/arrow1.png" alt=""/> </a>
+            <ul class="cute">
+                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
+                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
+                <li class="subitem3"><a href="product.html">Automatic Fails </a></li>
             </ul>
+        </li>
+        <li class="item2"><a href="#">Dignissim purus <img class="arrow-img " src="images/arrow1.png" alt=""/></a>
+            <ul class="cute">
+                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
+                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
+                <li class="subitem3"><a href="product.html">Automatic Fails </a></li>
+            </ul>
+        </li>
+        <li class="item3"><a href="#">Ultrices id du<img class="arrow-img img-arrow" src="images/arrow1.png" alt=""/> </a>
+            <ul class="cute">
+                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
+                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
+                <li class="subitem3"><a href="product.html">Automatic Fails</a></li>
+            </ul>
+        </li>
+        <li class="item4"><a href="#">Cras iacaus rhone <img class="arrow-img img-left-arrow" src="images/arrow1.png" alt=""/></a>
+            <ul class="cute">
+                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
+                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
+                <li class="subitem3"><a href="product.html">Automatic Fails </a></li>
+            </ul>
+        </li>
+        <li>
+            <ul class="kid-menu">
+                <li><a href="product.html">Tempus pretium</a></li>
+                <li ><a href="product.html">Dignissim neque</a></li>
+                <li ><a href="product.html">Ornared id aliquet</a></li>
+            </ul>
+        </li>
+        <ul class="kid-menu ">
+            <li><a href="product.html">Commodo sit</a></li>
+            <li ><a href="product.html">Urna ac tortor sc</a></li>
+            <li><a href="product.html">Ornared id aliquet</a></li>
+            <li><a href="product.html">Urna ac tortor sc</a></li>
+            <li ><a href="product.html">Eget nisi laoreet</a></li>
+            <li><a href="product.html">Faciisis ornare</a></li>
+            <li class="menu-kid-left"><a href="contact.html">Contact us</a></li>
         </ul>
-    </div>
-    <!--initiate accordion-->
-    <script type="text/javascript">
-        $(function() {
-            var menu_ul = $('.menu > li > ul'),
-                    menu_a  = $('.menu > li > a');
-            menu_ul.hide();
-            menu_a.click(function(e) {
-                e.preventDefault();
-                if(!$(this).hasClass('active')) {
-                    menu_a.removeClass('active');
-                    menu_ul.filter(':visible').slideUp('normal');
-                    $(this).addClass('active').next().stop(true,true).slideDown('normal');
-                } else {
-                    $(this).removeClass('active');
-                    $(this).next().stop(true,true).slideUp('normal');
-                }
-            });
-        });
-    </script>
-    <div class=" chain-grid menu-chain">
-        <a href="single.html"><img class="img-responsive chain" src="images/wat.jpg" alt=" " /></a>
-        <div class="grid-chain-bottom chain-watch">
-            <span class="actual dolor-left-grid">300$</span>
-            <span class="reducedfrom">500$</span>
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        </div>
-    </div>
-    <a class="view-all all-product" href="product.html">VIEW ALL PRODUCTS<span> </span></a>
+    </ul>
 </div>
