--- a/template/footer-revolution.html
+++ b/template/footer-revolution.html
@@ -1,4 +1,3 @@
-<!--footer-->
 <div class="footer">
     <div class="footer-top">
         <div class="container">
@@ -6,7 +5,7 @@
                 <h6>NEWS-LETTER</h6>
                 <div class="sub-left-right">
                     <form>
-                        <input type="text" value="Enter email here" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter email here';}" />
+                        <input type="text" value="Enter email here"onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter email here';}" />
                         <input type="submit" value="SUBSCRIBE" />
                     </form>
                 </div>
@@ -29,18 +28,18 @@
             <div class="footer-bottom-cate">
                 <h6>CATEGORIES</h6>
                 <ul>
-                    <li><a href="#">Đầm nữ</a></li>
-                    <li><a href="#">Áo nam</a></li>
-                    <li><a href="#">Quần nam</a></li>
-                    <li ><a href="#">Giày dép</a></li>
-                    <li ><a href="#">Mũ nón</a></li>
-                    <li><a href="#">Mắt kính</a></li>
-                    <li><a href="#">Đồng hồ</a></li>
-                    <li ><a href="#">Dây chuyền</a></li>
-                    <li><a href="#">Khuyên tai</a></li>
-                    <li><a href="#">Nhẫn</a></li>
-                    <li ><a href="#">Nước hoa</a></li>
-                    <li ><a href="#">Balô</a></li>
+                    <li><a href="#">Curabitur sapien</a></li>
+                    <li><a href="#">Dignissim purus</a></li>
+                    <li><a href="#">Tempus pretium</a></li>
+                    <li ><a href="#">Dignissim neque</a></li>
+                    <li ><a href="#">Ornared id aliquet</a></li>
+                    <li><a href="#">Ultrices id du</a></li>
+                    <li><a href="#">Commodo sit</a></li>
+                    <li ><a href="#">Urna ac tortor sc</a></li>
+                    <li><a href="#">Ornared id aliquet</a></li>
+                    <li><a href="#">Urna ac tortor sc</a></li>
+                    <li ><a href="#">Eget nisi laoreet</a></li>
+                    <li ><a href="#">Faciisis ornare</a></li>
                 </ul>
             </div>
             <div class="footer-bottom-cate bottom-grid-cat">
@@ -73,9 +72,9 @@
                 </ul>
             </div>
             <div class="footer-bottom-cate cate-bottom">
-                <h6>OUR ADDRESS</h6>
+                <h6>OUR ADDERSS</h6>
                 <ul>
-                    <li>Revolution Company. </li>
+                    <li>Aliquam metus  dui. </li>
                     <li>orci, ornareidquet</li>
                     <li> ut,DUI.</li>
                     <li >nisi, dignissim</li>
