--- a/template/header-revolution.html
+++ b/template/header-revolution.html
@@ -56,7 +56,18 @@
                     <li ><a href="register.html">SIGNUP</a></li>
                 </ul>
                 <ul class="login" ng-show="authData">
-                    <li><a href="login.html"><span> </span>LOGOUT</a></li> |
+                    <li><button style="
+						background:#ff835c;
+						color: #FFF;
+						font-size: 1em;
+						transition: 0.5s all;
+						-webkit-transition: 0.5s all;
+						-moz-transition: 0.5s all;
+						-o-transition: 0.5s all;
+						display: inline-block;
+						text-transform: uppercase;
+						border:none;
+						outline:none;" ng-click="logout()"><span> </span>LOGOUT</button></li>
                 </ul>
                 <div class="cart"><a href="cart.html"><span> </span>CART</a></div>
                 <div class="clearfix"> </div>
