--- a/template/categories-revolution.html
+++ b/template/categories-revolution.html
@@ -2,47 +2,46 @@
 
     <h3 class="cate">CATEGORIES</h3>
     <ul class="menu">
-        <li class="item1"><a href="#">Curabitur sapien<img class="arrow-img" src="images/arrow1.png" alt=""/> </a>
+        <li class="item1"><a href="#">ĐẦM NỮ<img class="arrow-img" src="images/arrow1.png" alt=""/> </a>
             <ul class="cute">
-                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
-                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
-                <li class="subitem3"><a href="product.html">Automatic Fails </a></li>
+                <li class="subitem1"><a href="product.html#!/product/sleepdress">ĐẦM NGỦ </a></li>
+                <li class="subitem2"><a href="product.html#!/product/promdress">ĐẦM DẠ HỘI </a></li>
+                <li class="subitem3"><a href="product.html#!/product/skirt">VÁY </a></li>
             </ul>
         </li>
-        <li class="item2"><a href="#">Dignissim purus <img class="arrow-img " src="images/arrow1.png" alt=""/></a>
+        <li class="item2"><a href="#">GIÀY DÉP <img class="arrow-img " src="images/arrow1.png" alt=""/></a>
             <ul class="cute">
-                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
-                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
-                <li class="subitem3"><a href="product.html">Automatic Fails </a></li>
+                <li class="subitem1"><a href="product.html#!/product/sportshoes">GIÀY THỂ THAO </a></li>
+                <li class="subitem2"><a href="product.html#!/product/lazyshoes">GIÀY LƯỜI </a></li>
+                <li class="subitem3"><a href="product.html#!/product/sandal">GIÀY SANDAL </a></li>
             </ul>
         </li>
-        <li class="item3"><a href="#">Ultrices id du<img class="arrow-img img-arrow" src="images/arrow1.png" alt=""/> </a>
+        <li class="item3"><a href="#">ÁO NAM<img class="arrow-img img-arrow" src="images/arrow1.png" alt=""/> </a>
             <ul class="cute">
-                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
-                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
-                <li class="subitem3"><a href="product.html">Automatic Fails</a></li>
+                <li class="subitem1"><a href="product.html#!/product/">ÁO THUN </a></li>
+                <li class="subitem2"><a href="product.html#!/product/">ÁO SƠ MI </a></li>
+                <li class="subitem3"><a href="product.html#!/product/">ÁO KHOÁC </a></li>
             </ul>
         </li>
-        <li class="item4"><a href="#">Cras iacaus rhone <img class="arrow-img img-left-arrow" src="images/arrow1.png" alt=""/></a>
+        <li class="item4"><a href="#">QUẦN NAM <img class="arrow-img img-left-arrow" src="images/arrow1.png" alt=""/></a>
             <ul class="cute">
-                <li class="subitem1"><a href="product.html">Cute Kittens </a></li>
-                <li class="subitem2"><a href="product.html">Strange Stuff </a></li>
-                <li class="subitem3"><a href="product.html">Automatic Fails </a></li>
+                <li class="subitem1"><a href="product.html#!/product/">QUẦN JEAN </a></li>
+                <li class="subitem2"><a href="product.html#!/product/">QUẦN KAKI </a></li>
+                <li class="subitem3"><a href="product.html#!/product/">QUẦN THUN </a></li>
             </ul>
         </li>
         <ul class="kid-menu">
-            <li><a href="product.html">Tempus pretium</a></li>
-            <li ><a href="product.html">Dignissim neque</a></li>
-            <li ><a href="product.html">Ornared id aliquet</a></li>
+            <li ><a href="product.html#!/product/hat">MŨ NÓN</a></li>
+            <li ><a href="product.html#!/product/">MẮT KÍNH</a></li>
+            <li ><a href="product.html#!/product/">ĐỒNG HỒ</a></li>
         </ul>
         <ul class="kid-menu ">
-            <li><a href="product.html">Commodo sit</a></li>
-            <li ><a href="product.html">Urna ac tortor sc</a></li>
-            <li><a href="product.html">Ornared id aliquet</a></li>
-            <li><a href="product.html">Urna ac tortor sc</a></li>
-            <li ><a href="product.html">Eget nisi laoreet</a></li>
-            <li><a href="product.html">Faciisis ornare</a></li>
-            <li class="menu-kid-left"><a href="contact.html">Contact us</a></li>
+            <li ><a href="product.html#!/product/">DÂY CHUYỀN</a></li>
+            <li ><a href="product.html#!/product/">KHUYÊN TAI</a></li>
+            <li ><a href="product.html#!/product/">NHẪN</a></li>
+            <li ><a href="product.html#!/product/">NƯỚC HOA</a></li>
+            <li ><a href="product.html#!/product/">BALÔ</a></li>
+            <li class="menu-kid-left"><a href="contact.html">CONTACT US</a></li>
         </ul>
     </ul>
 </div>
