Update Product Interface
Handler Products Show

--- a/template/product-detail.template.html
+++ b/template/product-detail.template.html
@@ -3,7 +3,7 @@
         <div class="grid images_3_of_2">
             <ul id="etalage">
                 <li>
-                    <a href="optionallink.html">
+                    <a href="#">
                         <img class="etalage_thumb_image" src="images/s4.jpg" class="img-responsive" />
                         <img class="etalage_source_image" src="images/si4.jpg" class="img-responsive" title="" />
                     </a>
