--- a/template/image-picker.html
+++ b/template/image-picker.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12">
-    <button ng-click="browserImage()", type="filepicker">
-        <span class = "glyphicon glyphicon-plus">Change Image</span>
+    <button class="btn-change-avatar" ng-click="browserImage()", type="filepicker">
+        <span class = "glyphicon glyphicon-plus">ChangeAvatar</span>
     </button>
 </div>
