--- a/css/mycss.css
+++ b/css/mycss.css
@@ -133,3 +133,113 @@
     color: white;
     border: none;
 }
+
+/* NG-ANIMATION */
+
+.animate-enter,
+.animate-leave {
+    -webkit-transition: 1000ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+    -moz-transition: 1000ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+    -ms-transition: 1000ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+    -o-transition: 1000ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+    transition: 1000ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+    position: relative;
+    display: block;
+}
+
+.animate-leave.animate-leave-active,
+.animate-enter {
+    -webkit-transform: rotateX(90deg) rotateZ(90deg);
+    -moz-transform: rotateX(90deg) rotateZ(90deg);
+    -ms-transform: rotateX(90deg) rotateZ(90deg);
+    -o-transform: rotateX(90deg) rotateZ(90deg);
+    transform: rotateX(90deg) rotateZ(90deg);
+    opacity: 0;
+    height: 0px;
+}
+
+.animate-enter.animate-enter-active,
+.animate-leave {
+    -webkit-transform: rotateX(0deg) rotateZ(0deg);
+    -moz-transform: rotateX(0deg) rotateZ(0deg);
+    -ms-transform: rotateX(0deg) rotateZ(0deg);
+    -o-transform: rotateX(0deg) rotateZ(0deg);
+    transform: rotateX(0deg) rotateZ(0deg);
+    opacity: 1;
+    height: 30px;
+}
+
+.ng-hide {
+    height: 0;
+    width: 0;
+    background-color: transparent;
+    top:-200px;
+    left: 200px;
+}
+
+/* Animate `ngRepeat` in `phoneList` component */
+.phone-list-item.ng-enter,
+.phone-list-item.ng-leave,
+.phone-list-item.ng-move {
+   overflow: hidden;
+   transition: 0.5s linear all;
+ }
+
+.phone-list-item.ng-enter,
+.phone-list-item.ng-leave.ng-leave-active,
+.phone-list-item.ng-move {
+   height: 0;
+   margin-bottom: 0;
+   opacity: 0;
+   padding-bottom: 0;
+   padding-top: 0;
+ }
+
+.phone-list-item.ng-enter.ng-enter-active,
+.phone-list-item.ng-leave,
+.phone-list-item.ng-move.ng-move-active {
+   height: 120px;
+   margin-bottom: 20px;
+   opacity: 1;
+   padding-bottom: 4px;
+   padding-top: 15px;
+ }
+
+/* Animate view transitions with `ngView` */
+.view-container {
+   position: relative;
+ }
+
+.view-frame {
+   margin-top: 20px;
+ }
+
+.view-frame.ng-enter,
+.view-frame.ng-leave {
+   background: white;
+   left: 0;
+   position: absolute;
+   right: 0;
+   top: 0;
+ }
+
+.view-frame.ng-enter {
+   animation: 1s fade-in;
+   z-index: 100;
+ }
+
+.view-frame.ng-leave {
+   animation: 1s fade-out;
+   z-index: 99;
+ }
+
+@keyframes fade-in {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+@keyframes fade-out {
+  from { opacity: 1; }
+  to   { opacity: 0; }
+}
+
