--- a/template/product-detail.template.html
+++ b/template/product-detail.template.html
@@ -39,34 +39,39 @@
                                 <h4 class="modal-title">Add to cart</h4>
                             </div>
                             <div class="modal-body">
-                                <form ng-show="isLogin" style="font-family: 'Helvetica Neue';font-size: 20px">
+                                <form style="font-family: 'Helvetica Neue';font-size: 20px" ng-show="isLogin" style="font-family: 'Helvetica Neue';font-size: 20px">
                                     <tr>
-                                        <td>Tên sản phẩm</td>
-                                        <td>{{ product.name }}</td>
-                                    </tr>
+                                        <div style="float: left; width: 100px; height: 30px">
+                                            <td>Sản phẩm</td>
+                                        </div>
+                                        <td style="margin-left: 25px;">{{ product.name }}</td>
+                                    </tr><div style="margin: 25px"></div>
                                     <tr>
-                                        <td width="20px"><span>Số lượng</span></td>
-                                        <td><input type="number" id="number" value="1" style="width: 100px" ng-model="quantity" min="1" max="1000" required/></td>
-                                    </tr>
+                                        <div style="float: left; width: 100px; height: 30px">
+                                            <td><span>Số lượng</span></td>
+                                        </div>
+                                        <td><input type="number" id="number" value="1" style="margin-left: 20px; width: 100px" ng-model="quantity" min="1" max="1000" required/></td>
+                                    </tr><div style="margin: 25px"></div>
                                     <tr>
-                                        <td><span>Size</span></td>
+                                        <div style="float: left; width: 100px; height: 30px">
+                                            <td><span>Size</span></td>
+                                        </div>
                                         <td height="60px">
-                                            <input type="text" id="sizeProduct" ng-model="sizeProduct" style="width: 100px" required/>
+                                            <input type="text" id="sizeProduct" ng-model="sizeProduct" style="margin-left: 20px; width: 100px" required/>
                                         </td>
-                                    </tr>
-
-                                    <tr >
-                                        <td><span>Màu</span></td>
-                                        <td><input style="width: 100px" type="color" name="favcolor" value="#ff0000"></td>
-                                    </tr>
-                                    <tr>
-                                        <td ng-show="checkProductChoose">VUI LÒNG KIỂM TRA LẠI DỮ LIỆU!</td>
-                                    </tr>
-                                    <div style="float: right">
-                                        <span>Thành tiền {{product.cost * quantity | currency }}</span>
+                                    </tr><div style="margin: 25px"></div>
+                                    <!--<tr >-->
+                                        <!--<td width="150px" height="70px"><span>Màu</span></td>-->
+                                        <!--<td><input style="width: 100px" type="color" name="favcolor" value="#ff0000"></td>-->
+                                    <!--</tr><div style="margin: 25px"></div>-->
+                                    <!--<tr>-->
+                                        <!--<td ng-show="checkProductChoose">VUI LÒNG KIỂM TRA LẠI DỮ LIỆU!</td>-->
+                                    <!--</tr><div style="margin: 15px"></div>-->
+                                    <div style="float: left; margin: 20px">
+                                        <span>Thành tiền <b>{{product.cost * quantity | currency }}</b></span>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="saveProductChoose()">Save</button>
+                                        <button type="button" style="padding: 20px; background-color: #00BFF0; font-size: 20px; color: #d9edf7; border: none" class="btn btn-default" data-dismiss="modal" ng-click="saveProductChoose()">Save</button>
                                     </div>
                                 </form>
                                 <form ng-show="!isLogin" style="font-family: 'Helvetica Neue';font-size: 20px">
